<resources>
    <string name="app_name">Taxi App</string>
    <string name="driver_btn">driver</string>
    <string name="passenger_btn">passenger</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up_btn">sign up</string>
    <string name="log_in_link">Log In</string>
    <string name="empty_email_msg">Please input your email</string>
    <string name="empty_name_msg">Please input your name</string>
    <string name="name_length_msg">Name length has to be less than 15</string>
    <string name="empty_password_msg">Please input your password</string>
    <string name="password_length_msg">Password length has to be more than 5</string>
    <string name="passwords_match_msg">Passwords have to match</string>
    <string name="authentication_failed_msg">Authentication failed.</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="adjust_settings_msg">Adjust location settings on your device</string>
    <string name="permission_reason_msg">Location permission is needed for app functionality</string>
    <string name="ok_title">OK</string>
    <string name="turn_on_settings_msg">Turn on location on settings</string>
    <string name="settings_title">Settings</string>
    <string name="driver_position_title">Driver position</string>
    <string name="title_activity_passenger_maps">Map</string>
    <string name="passenger_position_title">Passenger position</string>
    <string name="driver_here_msg">Your driver is here</string>
    <string name="getting_taxi_state">Getting your taxi...</string>
    <string name="getting_driver_location_state">Getting your driver location...</string>
    <string name="distance_to_driver_state">Distance to driver: %.0f</string>
</resources>
